--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
             
             <ul class="copyright">
-               <li>&copy; <a href="http://devish222.github.io">Devish Patel</a></li>
+               <li>&copy; <a href="http://devishpatel.github.in.devish222">Devish Patel</a></li>
                  
             </ul>
 
