--- a/hotel/html form.html
+++ b/hotel/html form.html
@@ -19,16 +19,16 @@
 <table style="width:100%"><th><br><br>
 <table style="width:100%">
 
-  <tr><td><lable>Name:</lable></td>
+  <tr><td><label>Name:</label></td>
   <td><input type="text" name="Firstname" placeholder="First name"></td>
   <td><input type="text" name="Middlename" placeholder="Middle name"></td>
   <td><input type="text" name="Lastname" placeholder="Last name"></td></tr>
 
 </table><br><br>
 <table style="width:100%">
-<tr><td style="width:50%"><lable>Serial Number:</lable>
+<tr><td style="width:50%"><label>Serial Number:</label>
   <input type="number" name="Snumber" ></td>
-<td><lable>Country:</lable>
+<td><label>Country:</label>
   <select name="country">
     <option>Select</option>
     <option>India</option>
@@ -40,13 +40,13 @@
 
 </table><br><br>
 <table style="width:100%">
-<tr><td style="width:50%"><lable>Phone Number: </lable><input type="number" ></td>
-<td><lable>E-mail:</lable> <input type="email" name="email"></td></tr>
+<tr><td style="width:50%"><label>Phone Number: </label><input type="number" ></td>
+<td><label>E-mail:</label> <input type="email" name="email"></td></tr>
 
 </table><br><br>
 
 <table style="width:100%">
-<tr><td style="width:50%"><lable>ID Type:</lable>
+<tr><td style="width:50%"><label>ID Type:</label>
   <select name="idtype">
     <option>Select</option>
     <option>Adharcard</option>
@@ -54,13 +54,13 @@
     <option>License</option>
     <option>Passport</option>
   </select></td><td>
-<lable>ID Number:</lable>
+<label>ID Number:</label>
   <input type="number" name="idnumber" ></td></tr>
 
 </table><br><br>
 <table style="width:100%">
 <tr><td style="width:50%">
-<lable>Rate:</lable>
+<label>Rate:</label>
 <select name="rate">
     <option>Select</option>
     <option>1,000/-</option>
@@ -69,13 +69,13 @@
     <option>4,000/-</option>
   </select></td>
 <td>
-<lable>Room Number:</lable>
+<label>Room Number:</label>
   <input type="number" name="rnumber" ></td></tr>
 
 </table><br><br>
 <table style="width:100%">
 <tr><td style="width:50%">
-<lable>Vehicle Type:</lable>
+<label>Vehicle Type:</label>
 <select name="type">
     <option>Select</option>
     <option>Two-wheeler</option>
@@ -83,17 +83,17 @@
     <option>Bus</option>
   </select></td>
 <td>
-<lable>Vehicle Number:</lable>
+<label>Vehicle Number:</label>
   <input type="number" name="vnumber" ></td></tr>
 
 </table><br><br>
 <table style="width:100%">
-<tr><td style="width:50%"><lable>Date-in: </lable><input type="date" ></td>
-<td><lable>Date-out:</lable> <input type="date" name="dateout"></td></tr>
+<tr><td style="width:50%"><label>Date-in: </label><input type="date" ></td>
+<td><label>Date-out:</label> <input type="date" name="dateout"></td></tr>
 
 </table><br><br>
 <table style="width:100%">
-<tr><td style="width:50%"><lable>Address:</lable>
+<tr><td style="width:50%"><label>Address:</label>
   <textarea name="address" rows="3" cols="50"></textarea></td></tr>
   
 </table><br><br>
@@ -105,3 +105,4 @@
 
 </body>
 </html>
+
