--- a/105D3300-1/dev.html
+++ b/105D3300-1/dev.html
@@ -19,7 +19,7 @@
 <body>
 <table  border="2" style="width:100%;height:100%;">
 <tr><td style="width:20%;height:20%"><center><img src="1.JPG" width="265px" height="225px"></center></td><td style="height:20%;" class="pic"><center><h1 class="f">“A friend is a brother who was once a bother.”</h1></center></td><td style="width:20%;height:20%"><center><img src="3.JPG" width="265px" height="225px"></center></td></tr>
-<tr><td style="width:20%;"><center><img src="4.JPG" width="265px" height="225px"></center></td><td class="pic"><center><img src="11.PNG" width="233px" height="225px"><img src="12.PNG" width="233px" height="225px"><img src="13.PNG" width="233px" height="225px"></center></td><td style="width:20%;"><center><img src="6.JPG" width="265px" height="225px"></center></td></tr>
+<tr class="pic"><td style="width:20%;"><center><img src="4.JPG" width="265px" height="225px"></center></td><td><center><img src="11.PNG" width="233px" height="225px"><img src="12.PNG" width="233px" height="225px"><img src="13.PNG" width="233px" height="225px"></center></td><td style="width:20%;"><center><img src="6.JPG" width="265px" height="225px"></center></td></tr>
 <tr><td style="width:20%;height:20%"><center><img src="7.JPG" width="265px" height="225px"></center></td><td style="height:20%;" class="pic"><center><h1 class="f">"A real friend is one who walks in when the rest of the world walks out."</h1></center></td><td style="width:20%;height:20%"><center><img src="9.JPG" width="265px" height="225px"></center></td></tr>
 </table>
 </body>
