--- a/hotel/html form.html
+++ b/hotel/html form.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="parul.css">
-
+<title>PATEL GROUP OF HOTELS</title>
 </head>
 <body>
 <table style="width:100%; height:100%;"
@@ -9,7 +9,7 @@
 <table style="width:100%">
 <tr>
     <th align="right"  width="30%"><img src="taj2.png" style="width:175px;height:125px"></th>
-    <td align="left"><h1>TAJ GROUP OF HOTELS</h1></td>
+    <td align="left"><h1>PATEL GROUP OF HOTELS</h1></td>
 </tr>
 
 </table>
@@ -93,8 +93,8 @@
 
 </table><br><br>
 <table style="width:100%">
-<tr><td style="width:50%"><label>Address:</label>
-  <textarea name="address" rows="3" cols="50"></textarea></td></tr>
+<tr><td><center><label>Days:</label>
+  <input type="number"></center></td></tr>
   
 </table><br><br>
   <input type="reset" value="Reset">
@@ -105,4 +105,5 @@
 
 </body>
 </html>
+
 
