--- a/hotel/html form1.html
+++ b/hotel/html form1.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="parul.css">
-
+<title>PATEL GROUP OF HOTELS</title>
 </head>
 <body>
 <table style="width:100%; height:100%;"
@@ -9,7 +9,7 @@
 <table style="width:100%">
 <tr>
     <th align="right"  width="30%"><img src="taj2.png" alt="HTML tutorial" style="width:175px;height:125px"></th>
-    <td align="left"><h1>TAJ GROUP OF HOTELS</h1></td>
+    <td align="left"><h1>PATEL GROUP OF HOTELS</h1></td>
 </tr>
 
 </table><br><br><br><br>
@@ -17,8 +17,8 @@
 <img src="taj1.png" width="300px" height="300px">
 <br><br><br><br>
 <table style="width:50%" border="2">
-<tr><td style="width:50%"><center><a href="file:///D:/html%20form.html">CHECK-IN</a></center></td><td><center>CHECK-OUT</center></td></tr>
-</table>
+<tr><td style="width:50%"><center><label><a href="https://devish222.github.io/hotel/html%20form.html">CHECK-IN</a></label></center></td><td><center><label><a href="https://devish222.github.io/hotel/html%20form2.html">CHECK-OUT</a></label></center></td></tr>
+</table><br><br><br><br>
 </center>
 
 </body>
