--- a/hotel/html form2.html
+++ b/hotel/html form2.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="parul.css">
-
+<title>PATEL GROUP OF HOTELS</title>
 </head>
 <body>
 <table style="width:100%; height:100%;"
@@ -9,7 +9,7 @@
 <table style="width:100%;height:20%">
 <tr>
     <td align="right"  width="30%"><img src="taj2.png" alt="HTML tutorial" style="width:175px;height:125px"></td>
-    <td align="left"><h1>TAJ GROUP OF HOTELS</h1></td>
+    <td align="left"><h1>PATEL GROUP OF HOTELS</h1></td>
 </tr>
 
 </table>
@@ -18,10 +18,9 @@
 <form>
 <lable>ENTER THE SERIAL NUMBER</lable><br><br><br>
 <input type="number" name="snumber"><br><br><br><br><br><br>
- 
 </form>
-<button type="button"><a href="">NEXT</a></button>
+<button type="button"><a href="https://devish222.github.io/hotel/html%20form3.html">NEXT</a></button>
 </center></th>
-</table>
+</table><br><br><br><br>
 </body>
 </html>
