--- a/hotel/html form1.html
+++ b/hotel/html form1.html
@@ -17,7 +17,7 @@
 <img src="taj1.png" width="300px" height="300px">
 <br><br><br><br>
 <table style="width:50%" border="2">
-<tr><td style="width:50%"><center><label><a href="https://devish222.github.io/hotel/html%20form.html">CHECK-IN</a></label></center></td><td><center><label><a href="https://devish222.github.io/hotel/html%20form2.html">CHECK-OUT</a></label></center></td></tr>
+<tr><td style="width:50%"><center><p><a href="https://devish222.github.io/hotel/html%20form.html">CHECK-IN</a></p></center></td><td><center><p><a href="https://devish222.github.io/hotel/html%20form2.html">CHECK-OUT</a></p></center></td></tr>
 </table><br><br><br><br>
 </center>
 
