--- a/hotel/html form1.html
+++ b/hotel/html form1.html
@@ -18,6 +18,6 @@
 <br><br><br><br>
 <center><button><a href="https://devish222.github.io/hotel/html%20form.html">CHECK-IN</a></button></center><center><button><a href="https://devish222.github.io/hotel/html%20form2.html">CHECK-OUT</a></button></center><br><br><br><br>
 </center>
-
+</form></th></table>
 </body>
 </html>
