--- a/hotel/html form1.html
+++ b/hotel/html form1.html
@@ -16,7 +16,7 @@
 <center>
 <img src="taj1.png" width="300px" height="300px">
 <br><br><br><br>
-<center><button><a href="https://devish222.github.io/hotel/html%20form.html">CHECK-IN</a></button></center><center><button><a href="https://devish222.github.io/hotel/html%20form2.html">CHECK-OUT</a></button></center><br><br><br><br>
+<center><button><a href="https://devish222.github.io/hotel/html%20form.html">CHECK-IN</a></button><button><a href="https://devish222.github.io/hotel/html%20form2.html">CHECK-OUT</a></button></center><br><br><br><br>
 </center>
 </form></th></table>
 </body>
