--- a/hotel/html form2.html
+++ b/hotel/html form2.html
@@ -16,11 +16,11 @@
 <br><br><br><br>
 <center>
 <form>
-<lable>ENTER THE SERIAL NUMBER</lable><br><br><br>
+<label>ENTER THE SERIAL NUMBER</label><br><br><br>
 <input type="number" name="snumber"><br><br><br><br><br><br>
 </form>
 <button type="button"><a href="https://devish222.github.io/hotel/html%20form3.html">NEXT</a></button>
-</center></th>
-</table><br><br><br><br>
+</center></th><br><br><br><br>
+</table>
 </body>
 </html>
