--- a/hotel/html form2.html
+++ b/hotel/html form2.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <table style="width:100%; height:100%;"
-   border="1px solid black;"><th>
+   border="1px solid black;"><th><form>
 <table style="width:100%;height:20%">
 <tr>
     <td align="right"  width="30%"><img src="taj2.png" alt="HTML tutorial" style="width:175px;height:125px"></td>
@@ -15,12 +15,11 @@
 </table>
 <br><br><br><br>
 <center>
-<form>
+
 <label>ENTER THE SERIAL NUMBER</label><br><br><br>
 <input type="number" name="snumber"><br><br><br><br><br><br>
-</form>
 <button type="button"><a href="https://devish222.github.io/hotel/html%20form3.html">NEXT</a></button>
-</center></th><br><br><br><br>
+</center></form><br><br><br><br></th>
 </table>
 </body>
 </html>
