--- a/hotel/html form2.html
+++ b/hotel/html form2.html
@@ -16,7 +16,7 @@
 <br><br><br><br>
 <center>
 
-<label>ENTER THE SERIAL NUMBER</label><br><br><br>
+ENTER THE SERIAL NUMBER<br><br><br><br>
 <input type="number" name="snumber"><br><br><br><br><br><br>
 <button type="button"><a href="https://devish222.github.io/hotel/html%20form3.html">NEXT</a></button>
 </center></form><br><br><br><br></th>
