--- a/hotel/html form.html
+++ b/hotel/html form.html
@@ -14,7 +14,9 @@
 
 </table>
 <table border="2" style="width:100%">
-<tr><td><center><b>HOTEL REGISTRATION FORM</b></center></td></tr>
+<tr>
+<td><center><p>CHECK OUT FORM</p></center></td>
+</tr>
 </table>
 <table style="width:100%"><th><br><br>
 <table style="width:100%">
