--- a/hotel/html form.html
+++ b/hotel/html form.html
@@ -15,7 +15,7 @@
 </table>
 <table border="2" style="width:100%">
 <tr>
-<td><center><p>CHECK OUT FORM</p></center></td>
+<td><center><p>CHECK IN FORM</p></center></td>
 </tr>
 </table>
 <table style="width:100%"><th><br><br>
