Update student registration form.html

--- a/Student registration form/student registration form.html
+++ b/Student registration form/student registration form.html
@@ -20,7 +20,7 @@
 <table style="width:100%" background="C:\Users\dj devish\Desktop\paper.png" style="background-attachment:fixed;background-repeat:no-repeat;background-size:cover;"><th><br><br>
 <table style="width:100%">
 <form>
-  <tr><td><lable>Name:</lable></td>
+  <tr><td><label>Name:</label></td>
   <td><input type="text" name="Firstname" placeholder="First name"></td>
   <td><input type="text" name="Middlename" placeholder="Middle name"></td>
   <td><input type="text" name="Lastname" placeholder="Last name"></td></tr>
